Added day 2 solution

--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.2</version>
+        </dependency>
+    </dependencies>
 </project>
