--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>vavr</artifactId>
             <version>0.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.14.0</version>
+        </dependency>
     </dependencies>
 </project>
